--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ classifiers = [
 dependencies = [
     "argschema >= 3.0.4",
     "jsonschema >= 4.6.0",
+    "sqlalchemy",
 ]
 
 [project.optional-dependencies]
