--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ classifiers = [
 dependencies = [
     "argschema >= 3.0.4",
     "jsonschema >= 4.6.0",
-    "sqlalchemy",
+    "sqlalchemy >= 2.0",
 ]
 
 [project.optional-dependencies]
