--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,7 @@ max-attributes = 12
 [tool.mypy]
 mypy_path = "src"
 explicit_package_bases = true
+namespace_packages = true
 ignore_missing_imports = true
 show_error_codes = true
 warn_unused_configs = true
