--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,8 @@ dev = [
     "mypy >= 1.2.0",
     "pylint >= 3.0.2",
     "pytest >= 7.4.3",
+    "pytest-dependency",
+    "pytest >= 7.4.3",
     "types-requests",
 ]
 
@@ -98,6 +100,7 @@ disable = [
     "wildcard-import",
 ]
 max-attributes = 12
+max-branches = 16
 
 [tool.mypy]
 mypy_path = "src"
